# covert_mi_to_mex

./: .gitignore  CMakeLists.txt  MiHigherDim.cpp  mi_utils.h  zwspMIhigh.txt
src/: miutils.cpp
